# langserver-glib

./: meson.build
lib/: Client.vala  Logger.vala  Server.vala  Types.vala  meson.build
src/: BuildSystemAnalyzer.vala  ProjectManager.vala  Server.vala  ValaFormatter.vala  meson.build
src/ProjectAnalyzers/: MesonAnalyzer.vala
src/linter/: Application.vala
test/: BaseTest.vala  DummyServer.vala  ExitTest.vala  InitializeTest.vala  VlsTest.vala  meson.build
